k8s/manifests/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sns
