k8s/manifests/payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: sns
  labels:
    app: payment
spec:
  selector:
    matchLabels:
      app: payment
  replicas: 1
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment
        image: sns-payment:latest
        ports:
        - containerPort: 3000
        imagePullPolicy: "Never"
        resources:
          limits:
            memory: "512Mi"
            cpu: "300m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        readinessProbe:
          httpGet:
            path: "/probes/readiness"
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 30
        livenessProbe:
          httpGet:
            path: "/probes/liveness"
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 30
         
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: sns
  labels:
    app: payment
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: payment
